--- a/committee.tex
+++ b/committee.tex
@@ -2336,7 +2336,7 @@ When the internal case is more complex than the external case, the light head is
 When the external case is more complex than the internal case, the relative pronoun is not a single constituent within the light head. The relative pronoun contains features that are not part of the light head. Since the weaker feature containment requirement is not met, the stronger constituent requirement cannot be met either. As a result, there is no grammatical form to surface when the internal case is more complex.
 
 
-\subsection{The relative pronoun}
+\subsection{The relative pronoun}\label{sec:pol-rel}
 
 In this section I discuss the relative pronoun in Polish headless relatives.
 
@@ -2543,47 +2543,17 @@ I argue that \tit{k} spells out six features: \tsc{wh}, \tsc{rel}, \tsc{ind}, \t
 
 The relative pronouns listed in Table \ref{tbl:pol-rel-dem} are \tsc{wh}-pronouns, and they are also used as interrogatives in Polish. Therefore, just like the Modern German \tit{w}, the Polish \tit{k} spells out the features \tsc{wh} and \tsc{rel}.
 
-Before I continue with the other four features, I briefly return to the change in the vowel in Table \ref{tbl:pol-rel-dem}. The \tit{k} /k/ combines with the \tit{o} /ɔ/, and the \tit{t} /t/ combines with the \tit{e} /ɛ/. I analyze this change as a phonological process, in which the vowel changes depending on the consonant (cluster).
+Before I continue with the other four features, I briefly return to the change in the vowel in Table \ref{tbl:pol-rel-dem}. The \tit{k} /k/ combines with the \tit{o} /ɔ/, and the \tit{t} /t/ combines with the \tit{e} /ɛ/. I analyze this change as a phonological process, in which the vowel changes depending on the consonant (cluster). Specifically, I argue that there is an underlying /ɛ/ changes into a /ɔ/ when it follows the \tit{k}. I describe the situation in \ref{ex:e-o-phon-kt}.
 
-specifically, I argue that there is an underlying /ɛ/ changes into a /ɔ/ when it combines with the \tit{k}.
-
-\footnote{
-The phonological conditioning could also be the other way around: the vowel differs and as a reflex, the initial consonant changes with it. Then it is the masculine demonstrative and the inanimate relative pronoun patterning together to the exclusion of the animate relative pronoun. At first sight, this might seem counterintuitive. This changes when zooming in on the difference between \tsc{wh}-pronouns and demonstratives regarding the concept of gender. Demonstratives get their gender from the (possibly phonologically empty) head noun, and the gender is syntactic (i.e. it depends on the grammatical gender of the head noun). \tsc{wh}-pronouns (at least the ones in Table \ref{tbl:pol-rel-dem}) do not combine with a noun, so they get their gender from themselves, and their gender is semantic. Possibly, syntactic masculine gender contains one feature less than semantic animate gender: \tsc{masc} vs. \tsc{masc} + \tsc{an}. If the inanimate lacks both of these features, it can pattern with the masculine demonstrative to the exclusion of the animate relative pronoun.
-
-An indication into the direction of letting the \tit{k} be conditioned by the vowel comes from the fact that \tsc{wh}-pronouns in Polish often start with a \tit{k}.
-
-\ex.
-\a. g-dzie = where at (g is the result of voicing)
-\b. k-iedy = when
-\b. k-tory = which one
-
-Another instance of \tit{k} to \tit{cz} could be:
-
-\ex.
-\b. cz-yj = k-jyj 'whose'
-\a. czyjego
-
-Or this latter is another example of a \tsc{wh}-pronoun that is does not have a \tit{k} but \tit{cz}. There is also a \tsc{wh}-pronoun that starts with a \tit{j}:
-
-j-ak = how
-
-Since this type of analysis requires a throrough investiation into gender systems, I leave investigating this options further for future research.
-}
-\footnote{
-A third logical option is that both the vowels (\tit{o} and \tit{e}) and the consonants (\tsc{k} and \tsc{t}) have a different feature content.
-}
-
-I describe the situation in \ref{ex:e-o-phon-kt}.
-
-% \ex.\label{ex:e-o-phon-kt}
-% \a. \tsc{v} ⇔ ɔ k{$_$}
-% \b. \tsc{v} ⇔ ɛ t{$_$}
+\ex.\label{ex:e-o-phon-kt}
+\a. \tsc{v} ⇔ ɔ k$\_$
+\b. \tsc{v} ⇔ ɛ t$\_$
 
 The vowel is an /o/ when it follows the /k/, and it is an /ɛ/ when it follows the /t/. In phonological terms, back vowel /ɔ/ follows a the dorsal /k/, which is both back. The front vowel /ɛ/ follows the coronal /t/, which are both front.
 
-% \ex.\label{ex:e-o-phon-feat}
-% \a. \tsc{v} ⇔ ɔ [\tsc{dors}]{$_$}
-% \b. \tsc{v} ⇔ ɛ [\tsc{cor}]{$_$}
+\ex.\label{ex:e-o-phon-feat}
+\a. \tsc{v} ⇔ ɔ [\tsc{dors}]$\_$
+\b. \tsc{v} ⇔ ɛ [\tsc{cor}]$\_$
 
 The vowel /ɛ/ is attested in another paradigm, namely in the gentive and dative of the inanimate relative pronouns. I put them besides the animate relative pronouns in Table \ref{ex:pol-rels}.
 
@@ -2608,11 +2578,20 @@ I assume that the palatalization is a consequence of the combination of /t͡s/ a
 }
 What sets this instance apart is that nothing follows this vowel, where there is always a consonant following in the other instances. I summarize the phonological process I propose in \ref{ex:e-o-phon-feat-c}. When there is a closed syllable, the vowel is /ɔ/ following a dorsal and it is /ɛ/ following a coronal.\footnote{
 Another possibility is that the /ɔ/ in \tit{co} is a `different /ɔ/'. It namely spells out case features, which I argue later in this section the other vowel does not do.
+
+Under that view, the phonological conditioning could also work the other way around: there is an underlying /k/ that changes into a /t͡ʂ/ when it precedes an /ɛ/. An indication into this direction comes from the fact that \tsc{wh}-pronouns in Polish often start with a /k/.
+
+\exg. g-dzie, k-iedy, k-tory\\
+where at, when, which one\\
+
+If this is the right way of looking at it, then it is the masculine demonstrative and the inanimate relative pronoun patterning together to the exclusion of the animate relative pronoun. At first sight, this might seem counterintuitive. This changes when zooming in on the difference between \tsc{wh}-pronouns and demonstratives regarding the concept of gender. Demonstratives get their gender from the (possibly phonologically empty) head noun, and the gender is syntactic (i.e. it depends on the grammatical gender of the head noun). \tsc{wh}-pronouns (at least the ones in Table \ref{tbl:pol-rel-dem}) do not combine with a noun, so they get their gender from themselves, and their gender is semantic. Possibly, syntactic masculine gender contains one feature less than semantic animate gender: \tsc{masc} vs. \tsc{masc} + \tsc{an}. If the inanimate lacks both of these features, it can pattern with the masculine demonstrative to the exclusion of the animate relative pronoun.
+
+Since this type of analysis requires a thorough investigation into gender systems, I leave investigating this options further for future research.
 }
-%
-% \ex.\label{ex:e-o-phon-feat-c}
-% \a. \tsc{v} ⇔ ɔ [\tsc{dors}]{$_$}\tsc{c}
-% \b. \tsc{v} ⇔ ɛ [\tsc{cor}]{$_$}\tsc{c}
+
+\ex.\label{ex:e-o-phon-feat-c}
+\a. \tsc{v} ⇔ ɔ [\tsc{dors}]$\_$\tsc{c}
+\b. \tsc{v} ⇔ ɛ [\tsc{cor}]$\_$\tsc{c}
 
 I come back to the feature content of the vowel later. First I continue with the feature specification of \tit{k}.
 
@@ -2860,122 +2839,6 @@ jego is evidence for sigma and ref being in the vowel
 
 
 
-\tit{mu}, \tit{go}, \tit{e/o}, \tit{k}
-
-\ex. \tbf{Backtracking} \citep{starke2018}:\\
-When spellout fails, go back to the previous cycle, and try the next option for that cycle.\label{ex:backtracking}
-
-\ex.
-\tiny{
-\begin{forest} boompje
-  [\tsc{rel}P, s sep=17mm
-      [\tsc{rel}P,
-      tikz={
-      \node[label=below:\tit{k},
-      draw,circle,
-      scale=0.95,
-      fit to=tree]{};
-      }
-          [\tsc{rel}]
-          [\tsc{wh}P
-              [\tsc{wh}]
-              [\tsc{med}P,
-                  [\tsc{deix\scsub{2}}]
-                  [\tsc{deix\scsub{1}}]
-              ]
-          ]
-      ]
-      [\tsc{dat}P, s sep=17.5mm
-          [\tsc{an}P,
-          tikz={
-          \node[label=below:\tit{e/o},
-          draw,circle,
-          scale=0.9,
-          fit to=tree]{};
-          }
-              [\tsc{an}]
-              [\tsc{cl}P
-                  [\tsc{cl}]
-                  [\tsc{ref}]
-              ]
-          ]
-          [\tsc{dat}P,
-          tikz={
-          \node[label=below:\tit{mu},
-          draw,circle,
-          scale=0.95,
-          fit to=tree]{};
-          }
-              [\tsc{f}3]
-              [\tsc{acc}P
-                  [\tsc{f}2]
-                  [\tsc{nom}P
-                      [\tsc{f}1]
-                      [\tsc{ind}P
-                          [\tsc{ind}]
-                      ]
-                  ]
-              ]
-          ]
-      ]
-  ]
-\end{forest}
-}
-
-\ex.
-\tiny{
-\begin{forest} boompje
-  [\tsc{rel}P, s sep=17mm
-      [\tsc{rel}P,
-      tikz={
-      \node[label=below:\tit{k},
-      draw,circle,
-      scale=0.95,
-      fit to=tree]{};
-      }
-          [\tsc{rel}]
-          [\tsc{wh}P
-              [\tsc{wh}]
-              [\tsc{med}P,
-                  [\tsc{deix\scsub{2}}]
-                  [\tsc{deix\scsub{1}}]
-              ]
-          ]
-      ]
-      [\tsc{acc}P, s sep=24mm
-          [\tsc{ind}P,
-          tikz={
-          \node[label=below:\tit{e/o},
-          draw,circle,
-          scale=0.9,
-          fit to=tree]{};
-          }
-              [\tsc{ind}]
-              [\tsc{an}P
-                  [\tsc{an}]
-                  [\tsc{cl}P
-                      [\tsc{cl}]
-                      [\tsc{ref}]
-                  ]
-              ]
-          ]
-          [\tsc{acc}P,
-          tikz={
-          \node[label=below:\tit{go},
-          draw,circle,
-          scale=0.9,
-          fit to=tree]{};
-          }
-              [\tsc{f}2]
-              [\tsc{nom}P
-                  [\tsc{f}1]
-              ]
-          ]
-      ]
-  ]
-\end{forest}
-}
-
 \subsection{The (extra) light head}
 
 In my proposal, headless relatives are derived from light-headed relatives. The relative pronoun can delete the light head when the relative contains the light head as a single constituent. I suggest that this only holds for Polish when the internal and the external case match.
@@ -2984,7 +2847,7 @@ In this section, I show the internal structure of the Polish light head.
 
 I take the functional sequence of the extra light head in Modern German, and I show how these features are spelled out in Polish. In Modern German the extra light head spells out as a single constituent, in Polish it consists of two constituents. This is what leads Polish to be of a different language type than Modern German.
 Just like for Modern German, the extra light head is not attested in existing light-headed relatives in Polish.
-For Modern German, I gave two reasons for not taking the existing light-headed relative as source of the headless relative. I show that only one of them holds for Polish, and I discuss why the other one does not hold in the same way.
+For Modern German, I gave two reasons for not taking the existing light-headed relative as source of the headless relative. I show both of them hold for Polish too.
 
 In Section \ref{sec:light-mg}, I argued for a particular feature content of the extra light head in Modern German. In my proposal, the difference in spellout is the only difference between Modern German and Polish: the features that are spelled out are the same ones. Therefore, I assume that the extra light head in Polish spells out the same features as the extra light head in Modern German.
 I give the functional sequence for the extra light head in \ref{ex:fseq-wh-lh-pol}.
@@ -3009,12 +2872,17 @@ I give the functional sequence for the extra light head in \ref{ex:fseq-wh-lh-po
 \end{forest}
 \label{ex:fseq-wh-lh-pol}
 
-The \tsc{dat}P and the \tsc{f}3 are placed between brackets. This is what distinguishes the dative extra light head from the accusative one. In the discussion that follows, I focus on the accusative extra light head. The same applies to the dative light head.
+The \tsc{k}P is a placeholder for multiple case projections.
+When the extra light head is the accusative, the \tsc{k}P consists of the features \tsc{f}1 and \tsc{f}2, and they form the \tsc{acc}P.
+When the extra light head is the dative, the \tsc{k}P consists of the features \tsc{f}1, \tsc{f}2 and \tsc{f}3, and they form the \tsc{dat}P.
 
-I need two lexical entries to spell out the accusative extra light head.
+Three lexical entries are needed to spell out the accusative and dative extra light heads. I motivated their feature content in Section \ref{sec:pol-rel}.
+The morpheme \tit{e} spells out the features \tsc{ref}, Σ, \tsc{cl} and \tsc{an}, as shown in \ref{ex:pol-entry-e-rep}.
+The morpheme \tsc{go} spells out the features \tsc{ind}, \tsc{f}1 and \tsc{f}2, as shown in \ref{ex:pol-entry-go-rep}.
+The morpheme \tit{mu} spells out the features that \tit{go} spells out plus the feature \tsc{f}3, as shown in \ref{ex:pol-entry-mu-rep}.
 
-\ex.
-\a.
+\ex.\label{ex:pol-entries-elh}
+\a.\label{ex:pol-entry-e-rep}
 \begin{forest} boom
   [\tsc{an}P
       [\tsc{an}]
@@ -3028,7 +2896,7 @@ I need two lexical entries to spell out the accusative extra light head.
   ]
 {\draw (.east) node[right]{⇔ \tit{e}}; }
 \end{forest}
-\b.
+\b.\label{ex:pol-entry-go-rep}
 \begin{forest} boom
   [\tsc{acc}P
       [\tsc{f}2]
@@ -3041,10 +2909,36 @@ I need two lexical entries to spell out the accusative extra light head.
   ]
 {\draw (.east) node[right]{⇔ \tit{go}}; }
 \end{forest}
+\b.\label{ex:pol-entry-mu-rep}
+\begin{forest} boom
+  [\tsc{dat}P
+      [\tsc{f}3]
+      [\tsc{acc}P
+          [\tsc{f}2]
+          [\tsc{nom}P
+              [\tsc{f}1]
+              [\tsc{ind}P
+                  [\tsc{ind}]
+              ]
+          ]
+      ]
+  ]
+{\draw (.east) node[right]{⇔ \tit{mu}}; }
+\end{forest}
 
-This can be derived by..
+The accusative extra light head is derived as follows.
+The feature \tsc{ref} is merged with the feature Σ, forming the ΣP. This phrase is contained in the lexical tree in \ref{ex:pol-entry-e-rep}, so it is spelled out as \tit{e}.
+The feature \tsc{cl} is merged with the ΣP, forming the \tsc{cl}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-e-rep}, so it is spelled out as \tit{e}.
+The feature \tsc{an} is merged with the \tsc{cl}P, forming the \tsc{an}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-e-rep}, so it is spelled out as \tit{e}.
 
-\ex.
+The feature \tsc{ind} is merged with the \tsc{an}P, forming the \tsc{ind}P. This phrase (an \tsc{ind}P containing more features besides \tsc{ind}) is not contained in any of the lexical entries in \ref{ex:pol-entries-elh}.
+There is no specifier to move, so the first movement in the spellout algorithm is irrelevant. The second movement if tried: the complement of \tsc{ind}, the \tsc{an}P, is moved to the specifier of \tsc{ind}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}.
+The feature \tsc{f}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the lexical entries in \ref{ex:pol-entries-elh}. The first movement is tried: the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}.
+The feature \tsc{f}2 is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is not contained in any of the lexical entries in \ref{ex:pol-entries-elh}. The first movement is tried: the specifier of the \tsc{nom}P, the \tsc{an}P, is moved to the specifier of \tsc{acc}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep}, so it is spelled out as \tit{go}.
+
+The accusative animate extra light head is shown in \ref{ex:pol-elh-acc}.
+
+\ex.\label{ex:pol-elh-acc}
 \small{
 \begin{forest} boom
   [\tsc{dat}P, s sep=35mm
@@ -3083,9 +2977,13 @@ This can be derived by..
 \end{forest}
 }
 
-I give the dative light head for completeness.
+The dative animate extra light head is built as its accusative counterpart, except for that the feature \tsc{f}3 is added to create a dative.
 
-\ex.
+The feature \tsc{f}3 is merged with the \tsc{acc}P, forming an \tsc{dat}P. This phrase is not contained in any of the lexical entries in \ref{ex:pol-entries-elh}. The first movement is tried: the specifier of the \tsc{acc}P, the \tsc{an}P, is moved to the specifier of \tsc{dat}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep}, so it is spelled out as \tit{mu}.
+
+The dative animate extra light head is shown in \ref{ex:pol-elh-dat}.
+
+\ex.\label{ex:pol-elh-dat}.
 \small{
 \begin{forest} boom
   [\tsc{dat}P, s sep=40mm
