--- a/committee.tex
+++ b/committee.tex
@@ -3033,25 +3033,48 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rel}.\tsc{acc}
 
 For Modern German, I considered two kinds of light-headed relatives as the source of the headless relative.
 First, the light-headed relative is derived from an existing light-headed relative, and the deletion of the light head is optional. Second, the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German, and the deletion of the light head is obligatory.
-For Modern German I concluded it was the second, and I proposed which features should be in there. Taking these features, I observe that the same holds for Polish: the extra light head is not attested as a light head in an existing light-headed relative in Polish.
+For Modern German I concluded it was the second, and I proposed which features should be in there. This set of features in Polish corresponds to an extra light head like \tit{ego} or \tit{emu}, which are not attested as a light head in an existing light-headed relative in Polish.
 
-For Modern German, I gave two reasons for not taking the existing light-headed relative as source of the headless relative. I show that only one of them holds for Polish, and I discuss why the other one does not hold in the same way.
+In the rest of the section I consider the existing light-headed relative in Polish. For Modern German, I gave two arguments for not taking this existing light-headed relative as source of the headless relative. In what follows, I show that these arguments hold for Polish in the same way do for Modern German.
 
-to co cannot combine with \tit{kolwiek} `ever'.
+First, in headless relatives the morpheme \tit{kolwiek} `ever' can appear, as shown in \ref{ex:pol-headless-ever}.
+
+\exg. Jan śpiewa co -kolwiek Maria śpiewa.\\
+Jan sings \tsc{rel}.\tsc{an}.\tsc{acc} ever Maria sings\\
+`Jan sings everything Maria sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headless-ever}
+
+Light-headed relatives do not allow this morpheme to be inserted, illustrated in \ref{ex:mg-headed-ever}.
+
+\exg. Jan śpiewa to, co -kolwiek Maria śpiewa.\\
+Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} ever Maria sings\\
+`John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
+
+Just like for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
+\citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the light head to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the light head is that they are semantically incompatible.
+
+For concreteness, I assume \tit{ever} to be situated within the relative clause. Placing it in the main clause generates a different meaning, illustrated by the contrast in meaning between \ref{ex:cz-wh-ever} and \ref{ex:cz-ever-wh} in Czech.
 
 \ex.
-\ag. Jan śpiewa co -kolwiek Maria śpiewa.\\
-Jan sings what ever Maria sings\\
-`Jan sings everything Maria sings.'
-\bg. Jan śpiewa to, co -kolwiek Maria śpiewa.\\
-Jan sings \tsc{dem} what ever Maria sings\\
-`John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}
+\ag. Sním, co -koliv mi uvaříš.\\
+ eat.\tsc{1}sg what ever I.\tsc{dat} cook.2\tsc{sg}\\
+ `I will eat whatever you will cook for me.'\label{ex:cz-wh-ever}
+\bg. Sním co -koliv, co mi uvaříš.\\
+ eat.\tsc{1}sg what ever what I.\tsc{dat} cook.2\tsc{sg}\\
+ `I will eat anything that you will cook for me.' \flushfill{Czech, \pgcitealt{simik2016}{115}}\label{ex:cz-ever-wh}
 
-% the  incompatibility  of  light-headed  relatives  witheverfollowsfrom the fact thateverand the demonstrative are competing for the sameposition, namely the D0position
+\phantom{x}
+}
 
-Going after citko's translation, one would assume that the meaning is also slightly different, just like it is in Modern German.
+The second argument against the existing light-headed relatives being the source of headless relatives comes from their interpretation. Headless relatives have two possible interpretations, and light-headed relatives only have one of these.
+Just like in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 
-however, for a closely related language, Czech,
+Light-headed relatives, however,
+
+\ex.
+\ag. Czytam to co lubiȩ.\\
+ read.1\tsc{sg} \tsc{dem} what like-1\tsc{sg}\\
+\bg. Czytam wszystko co lubiȩ.\\
+read.1\tsc{sg} everything what like-1\tsc{sg}\\ \flushfill{Polish, \pgcitealt{citko2004}{104}}
 
 
 
