--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -787,3 +787,9 @@
   year={2002},
   publisher={Slavica, Bloomington, Indiana}
 }
+
+@article{simik2016,
+  title={On the semantics of Czech free relatives},
+  author={Šimík, Radek},
+  year={2016}
+}
