--- a/thesis.tex
+++ b/thesis.tex
@@ -79,7 +79,12 @@ thanks
 
 \part{The base}\label{part:variation}
 % \include{case-competition-typology}
-\include{committee}
+% \include{committee-intro}
+\include{committee-mg}
+\include{committee-pol}
+% \include{committee-ohg}
+% \include{committee-end}
+
 
 \bookmarksetup{startatroot}
 % \include{discussion}
