--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -793,3 +793,31 @@
   author={Šimík, Radek},
   year={2016}
 }
+
+@article{caha2020a,
+  title={Modeling declensions without declension features},
+  author={Caha, Pavel},
+  year={2020}
+}
+
+@article{de2018,
+  title={Unmerging analytic comparatives},
+  author={De Clercq, Karen and Vanden Wyngaerd, Guido},
+  journal={Jezikoslovlje},
+  volume={19},
+  number={3},
+  pages={341--363},
+  year={2018},
+  publisher={Sveuciliste Josipa Jurja Strossmayera u Osijeku}
+}
+
+@article{caha2019,
+  title={The fine structure of the comparative},
+  author={Caha, Pavel and De Clercq, Karen and Vanden Wyngaerd, Guido},
+  journal={Studia Linguistica},
+  volume={73},
+  number={3},
+  pages={470--521},
+  year={2019},
+  publisher={Wiley Online Library}
+}
